--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
         <h1>Heyyy que tallll chicos???? como os vaaaa ;);)</h1>
         <h2>Heyy este es mi segundo edit, a que cada vez lo hago mejor??? ;)))))</h2>
 	<h3>Hola, Edu</h3>
+    <p>
+        Dijo un buzo a una buza:
+
+- ¡Cómo corre la merluza!
+
+- Dirás como nada, monada.
+
+- Claro Clara, tú lo aclaras.
+    </p>
     </body>
 </html>
