--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <link rel="stylesheet" href="./lib/css/bootstrap.min.css">
-        <script src="./lib/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="./lib/css/bootstrap.css">
+        <script src="./lib/js/bootstrap.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
-    
+
     </body>
 </html>
