Add background image into css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <style>
-  
+  body{
+    background-image: url("./lib/imgs/initial-background.jpg");
+  }
 </style>
 <body>
   <!--Navbar-->
