div element with bootstrap

--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@ body{
   border-style: solid;
   border-color: red;
   border-width: 1px;
-  height: 350px;
-  width: 250px;
-  position: fixed;
-  top: 100;
-  left: 100;
+
 
 }
 </style>
@@ -61,8 +57,8 @@ body{
       </form>
     </div>
   </nav>
-  <div id="searchlocations" class="float-left">
-    df
+  <div id="searchlocations" class="col-4">
+    
   </div>
 <script>
   var locations= ["Barcelona"];
