--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@ body{
 
 
 }
+#mapmarker{
+  color: red;
+}
+#titlesearch{
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+#entersearch{
+  text-align: center;
+  padding: 10px;
+}
+
 </style>
 <body>
   <!--Navbar-->
@@ -52,17 +65,23 @@ body{
         </li>
 
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Location" aria-label="Search">
-        <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
-      </form>
+
     </div>
   </nav>
-  <div id="searchlocations" class="col-4">
-
-  </div>
-<script>
-  var locations= ["Barcelona"];
-</script>
-</body>
-</html>
+  <div id="searchlocations" class="col-4 ml-4 mt-4">
+    <div id="titlesearch">
+      <h5>Location</h5> <br>
+      <i id="mapmarker" class="fas fa-map-marker-alt fa-3x"></i><br><br>
+    </div>
+    <div id="entersearch">
+      <form>
+        <input class="form-control" type="text" placeholder="Enter location"> <br>
+        <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
+      </form>
+      <div>
+      </div>
+      <script>
+      var locations= ["Barcelona"];
+    </script>
+  </body>
+  </html>
