--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </div>
 <div id="section2" class="container-fluid bg-warning" style="padding-top:70px;padding-bottom:70px">
  
-  <h2> SINISTER PLACES</h2>
+  <h2> SINISTER PLACES Contacto</h2>
     <div  id="formContacto">
           <form>
         <div class="form-group row">
