--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </ul>
 </nav>
 
-<div id="section1" class="container-fluid bg-success" style="padding-top:70px;padding-bottom:70px">
+<div id="section1" class="container-fluid " style="padding-top:70px;padding-bottom:70px; padding:20%">
 
   <div id="searchlocations" class="col-4 ml-4 mt-4">
     <div id="titlesearch">
@@ -72,7 +72,7 @@
     </div>
   </div>
 </div>
-<div id="section2" class="container-fluid bg-warning" style="padding-top:70px;padding-bottom:70px">
+<div id="section2" class="container-fluid bg-warning" style="padding-top:70px;padding-bottom:70px;padding:20%">
  
   <h2> SINISTER PLACES Contacto</h2>
     <div  id="formContacto">
@@ -127,7 +127,7 @@
       </form>
   </div>
 </div>
-<div id="section3" class="container-fluid bg-secondary" style="padding-top:70px;padding-bottom:70px">
+<div id="section3" class="container-fluid bg-secondary" style="padding-top:70px;padding-bottom:70px;padding:20%">
   <h1>Lugares</h1>
   
 
