--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </div>
 <div id="section2" class="container-fluid bg-warning" style="padding-top:70px;padding-bottom:70px;padding:20%">
  
-  <h2> SINISTER PLACES Contacto</h2>
+  <h2 id="titulo2"> SINISTER PLACES </br>Contacto</h2>
     <div  id="formContacto">
           <form>
         <div class="form-group row">
@@ -99,8 +99,8 @@
                   Second radio
                 </label>
               </div>
-              <div class="form-check disabled">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
                 <label class="form-check-label" for="gridRadios3">
                   Third disabled radio
                 </label>
@@ -109,19 +109,19 @@
           </div>
         </fieldset>
         <div class="form-group row">
-          <div class="col-sm-2">Checkbox</div>
+          <div class="col-sm-2"></div>
           <div class="col-sm-10">
             <div class="form-check">
               <input class="form-check-input" type="checkbox" id="gridCheck1">
               <label class="form-check-label" for="gridCheck1">
-                Example checkbox
+                Recibir nuestras notificaciones
               </label>
             </div>
           </div>
         </div>
         <div class="form-group row">
           <div class="col-sm-10">
-            <button type="submit" class="btn btn-primary">Sign in</button>
+            <button type="submit" class="btn btn-primary">Enviar</button>
           </div>
         </div>
       </form>
