--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Sinister Places</title>
-   
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-   <link rel="stylesheet" type="text/css" href="lib/css/estiloPag.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="lib/css/estiloPag.css" media="screen" />
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -15,51 +15,51 @@
 </head>
 <style>
 /*body{
-  background-image: url("./lib/imgs/initial-background.jpg");
+background-image: url("./lib/imgs/initial-background.jpg");
 }
 
 #searchlocations{
-  border-radius: 15px;
-  border-style: solid;
-  border-color: red;
-  border-width: 1px;
+border-radius: 15px;
+border-style: solid;
+border-color: red;
+border-width: 1px;
 
 
 }
 #mapmarker{
-  color: red;
+color: red;
 }
 #titlesearch{
-  color: white;
-  text-align: center;
-  padding: 10px;
+color: white;
+text-align: center;
+padding: 10px;
 }
 #entersearch{
-  text-align: center;
-  padding: 10px;
+text-align: center;
+padding: 10px;
 }
 */
+
 </style>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">  
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#section1">SINISTER PLACES</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#section2">Contacto</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#section3">Lugares</a>
-    </li>
-      </div>
-    </li>
-  </ul>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#section1">Búsqueda</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#section2">Contacto</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#section3">Lugares</a>
+      </li>
+    </div>
+  </li>
+</ul>
 </nav>
 
-<div id="section1" class="container-fluid " style="padding-top:70px;padding-bottom:70px; padding:20%">
-
+<div class="container-fluid" id="section1">
   <div id="searchlocations" class="col-4 ml-4 mt-4">
     <div id="titlesearch">
       <i id="mapmarker" class="fas fa-map-marker-alt fa-3x"></i><br><br>
@@ -72,73 +72,75 @@
     </div>
   </div>
 </div>
-<div id="section2" class="container-fluid bg-warning" style="padding-top:70px;padding-bottom:70px;padding:20%">
- 
+
+
+<div id="section2" class="container-fluid bg-warning">
+
   <h2 id="titulo2"> SINISTER PLACES </br>Contacto</h2>
-    <div  id="formContacto">
-          <form>
-        <div class="form-group row">
-          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-          <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-          </div>
+  <div  id="formContacto">
+    <form>
+      <div class="form-group row">
+        <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-10">
+          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
         </div>
-        <fieldset class="form-group">
-          <div class="row">
-            <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
-            <div class="col-sm-10">
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                <label class="form-check-label" for="gridRadios1">
-                  First radio
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                <label class="form-check-label" for="gridRadios2">
-                  Second radio
-                </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
-                <label class="form-check-label" for="gridRadios3">
-                  Third disabled radio
-                </label>
-              </div>
-            </div>
-          </div>
-        </fieldset>
-        <div class="form-group row">
-          <div class="col-sm-2"></div>
+      </div>
+      <fieldset class="form-group">
+        <div class="row">
+          <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
           <div class="col-sm-10">
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="gridCheck1">
-              <label class="form-check-label" for="gridCheck1">
-                Recibir nuestras notificaciones
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+              <label class="form-check-label" for="gridRadios1">
+                First radio
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+              <label class="form-check-label" for="gridRadios2">
+                Second radio
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
+              <label class="form-check-label" for="gridRadios3">
+                Third disabled radio
               </label>
             </div>
           </div>
         </div>
-        <div class="form-group row">
-          <div class="col-sm-10">
-            <button type="submit" class="btn btn-primary">Enviar</button>
+      </fieldset>
+      <div class="form-group row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-10">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="gridCheck1">
+            <label class="form-check-label" for="gridCheck1">
+              Recibir nuestras notificaciones
+            </label>
           </div>
         </div>
-      </form>
+      </div>
+      <div class="form-group row">
+        <div class="col-sm-10">
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
 <div id="section3" class="container-fluid bg-secondary" style="padding-top:70px;padding-bottom:70px;padding:20%">
   <h1>Lugares</h1>
-  
 
-  
+
+
 </div>
- <script>
-      var locations= ["Barcelona"];
-      $( "#searchinput" ).autocomplete({
-        source: locations
-      });
-    </script>
+<script>
+var locations= ["Barcelona"];
+$( "#searchinput" ).autocomplete({
+  source: locations
+});
+</script>
 
 </body>
-  </html>
+</html>
