--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@ padding: 10px;
 </style>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
+    <a class="navbar-brand" href="#">Sinister places</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="#section1">Búsqueda</a>
@@ -55,6 +60,7 @@ padding: 10px;
         <a class="nav-link" href="#section3">Lugares</a>
       </li>
     </div>
+  </div>
   </li>
 </ul>
 </nav>
@@ -65,8 +71,8 @@ padding: 10px;
       <i id="mapmarker" class="fas fa-map-marker-alt fa-3x"></i><br><br>
     </div>
     <div id="entersearch">
-      <form>
-        <input id="searchinput" class="form-control" type="text" placeholder="Enter location"> <br>
+      <form >
+        <input id="search" class="form-control" type="text" placeholder="Enter location"> <br>
         <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
@@ -76,58 +82,21 @@ padding: 10px;
 
 <div id="section2" class="container-fluid bg-warning">
 
-  <h2 id="titulo2"> SINISTER PLACES </br>Contacto</h2>
-  <div  id="formContacto">
+  <h2>Contacto</h2>
     <form>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-        <div class="col-sm-10">
-          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-        </div>
+      <div class="form-group">
+        <label>Nombre</label>
+        <input type="email" class="form-control" placeholder="Introduce tu nombre">
       </div>
-      <fieldset class="form-group">
-        <div class="row">
-          <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
-          <div class="col-sm-10">
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-              <label class="form-check-label" for="gridRadios1">
-                First radio
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-              <label class="form-check-label" for="gridRadios2">
-                Second radio
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
-              <label class="form-check-label" for="gridRadios3">
-                Third disabled radio
-              </label>
-            </div>
-          </div>
-        </div>
-      </fieldset>
-      <div class="form-group row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-10">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck1">
-            <label class="form-check-label" for="gridCheck1">
-              Recibir nuestras notificaciones
-            </label>
-          </div>
-        </div>
+      <div class="form-group">
+        <label>Apellido</label>
+        <input type="email" class="form-control" placeholder="Introduce tu apellido">
       </div>
-      <div class="form-group row">
-        <div class="col-sm-10">
-          <button type="submit" class="btn btn-primary">Enviar</button>
-        </div>
+      <div class="form-group">
+        <label>Correo</label>
+        <input type="email" class="form-control" placeholder="Introduce tu correo">
       </div>
     </form>
-  </div>
 </div>
 <div id="section3" class="container-fluid bg-secondary" style="padding-top:70px;padding-bottom:70px;padding:20%">
   <h1>Lugares</h1>
