--- a/index.html
+++ b/index.html
@@ -84,17 +84,21 @@ padding: 10px;
 
   <h2>Contacto</h2>
     <form>
-      <div class="form-group">
+      <div class="form-group center_div">
         <label>Nombre</label>
-        <input type="email" class="form-control" placeholder="Introduce tu nombre">
+        <input type="text" class="form-control" placeholder="Introduce tu nombre">
       </div>
-      <div class="form-group">
+      <div class="form-group center_div">
         <label>Apellido</label>
-        <input type="email" class="form-control" placeholder="Introduce tu apellido">
+        <input type="text" class="form-control" placeholder="Introduce tu apellido">
       </div>
-      <div class="form-group">
+      <div class="form-group center_div">
         <label>Correo</label>
         <input type="email" class="form-control" placeholder="Introduce tu correo">
+      </div>
+      <div class="form-group center_div">
+        <label>Mensaje</label>
+        <textarea class="form-control" rows="3"></textarea>
       </div>
     </form>
 </div>
