--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <link rel="shortcut icon" href="lib/imgs/sull_icon.png" type="image/x-icon" />
   <script>
   $( function() {
     var locations= ["Barcelona","Otro sitio"];
