--- a/index.html
+++ b/index.html
@@ -80,34 +80,36 @@ padding: 10px;
 </div>
 
 
-<div id="section2" class="container-fluid bg-warning">
-
+<div class="center_container container-fluid bg-dark text-white">
   <h2>Contacto</h2>
     <form>
-      <div class="form-group center_div">
+      <div class="form-group">
         <label>Nombre</label>
-        <input type="text" class="form-control" placeholder="Introduce tu nombre">
+        <input type="text" class="center_input form-control" placeholder="Introduce tu nombre">
       </div>
-      <div class="form-group center_div">
+      <div class="form-group">
         <label>Apellido</label>
-        <input type="text" class="form-control" placeholder="Introduce tu apellido">
+        <input type="text" class="center_input form-control" placeholder="Introduce tu apellido">
       </div>
-      <div class="form-group center_div">
+      <div class="form-group">
         <label>Correo</label>
-        <input type="email" class="form-control" placeholder="Introduce tu correo">
+        <input type="email" class="center_input form-control" placeholder="Introduce tu correo">
       </div>
-      <div class="form-group center_div">
+      <div class="form-group">
         <label>Mensaje</label>
-        <textarea class="form-control" rows="3"></textarea>
+        <textarea class="center_input form-control" rows="3"></textarea>
       </div>
     </form>
 </div>
-<div id="section3" class="container-fluid bg-secondary" style="padding-top:70px;padding-bottom:70px;padding:20%">
-  <h1>Lugares</h1>
-
-
-
+<div id="section3" class="center_container container" >
+  <h2>Contribuir</h2>
+  Github<br>
+  <a href="https://github.com/vvsvictor/Sinister-Places" target="_blank"><i class="fab fa-github fa-7x"></i></a>
 </div>
+<div id="footer" class=" center_container container-fluid bg-dark text-white">
+  © 2018 Copyright - Sinister Places
+</div>
+
 <script>
 var locations= ["Barcelona"];
 $( "#searchinput" ).autocomplete({
