Update initial page

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ padding: 10px;
 </nav>
 
 <div class="container-fluid" id="section1">
-  <div id="searchlocations" class="col-4 ml-4 mt-4">
+  <div id="searchlocations" >
     <div id="titlesearch">
       <i id="mapmarker" class="fas fa-map-marker-alt fa-3x"></i><br><br>
     </div>
