--- a/index.html
+++ b/index.html
@@ -24,48 +24,72 @@
 </head>
 
 <body>
-  <!--Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Sinister Places</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
+    <a class="navbar-brand" href="#">Sinister places</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Search location <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-
-      </ul>
-
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#section1">Búsqueda</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#section2">Contacto</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#section3">Lugares</a>
+      </li>
     </div>
-  </nav>
-  <div id="searchlocations" class="col-4 ml-4 mt-4">
+  </div>
+  </li>
+</ul>
+</nav>
+
+<div class="container-fluid" id="section1">
+  <div id="searchlocations" >
     <div id="titlesearch">
       <i id="mapmarker" class="fas fa-map-marker-alt fa-3x"></i><br><br>
     </div>
     <div id="entersearch">
-      <form>
-        <input id="searchinput" class="form-control" type="text" placeholder="Enter location"> <br>
+      <form >
+        <input id="search" class="form-control" type="text" placeholder="Enter location"> <br>
         <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
   </div>
+</div>
+
+
+<div class="center_container container-fluid bg-dark text-white">
+  <h2>Contacto</h2>
+    <form>
+      <div class="form-group">
+        <label>Nombre</label>
+        <input type="text" class="center_input form-control" placeholder="Introduce tu nombre">
+      </div>
+      <div class="form-group">
+        <label>Apellido</label>
+        <input type="text" class="center_input form-control" placeholder="Introduce tu apellido">
+      </div>
+      <div class="form-group">
+        <label>Correo</label>
+        <input type="email" class="center_input form-control" placeholder="Introduce tu correo">
+      </div>
+      <div class="form-group">
+        <label>Mensaje</label>
+        <textarea class="center_input form-control" rows="3"></textarea>
+      </div>
+    </form>
+</div>
+<div id="section3" class="center_container container" >
+  <h2>Contribuir</h2>
+  Github<br>
+  <a href="https://github.com/vvsvictor/Sinister-Places" target="_blank"><i class="fab fa-github fa-7x"></i></a>
+</div>
+<div id="footer" class=" center_container container-fluid bg-dark text-white">
+  © 2018 Copyright - Sinister Places
+</div>
 
   </body>
   </html>
