Add section2 id

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </div>
 
 
-<div class="center_container container-fluid bg-dark text-white">
+<div class="center_container container-fluid bg-dark text-white" id="section2">
   <h2>Contacto</h2>
   <form>
     <div class="form-group">
@@ -82,7 +82,7 @@
     </div>
   </form>
 </div>
-<div id="section3" class="center_container container" >
+<div id="section3" class="center_container container">
   <h2>Contribuir</h2>
   Github<br>
   <a href="https://github.com/vvsvictor/Sinister-Places" target="_blank"><i class="fab fa-github fa-7x"></i></a>
