Change "Search" to "Buscar"

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div id="entersearch">
       <form >
         <input id="search" class="form-control" type="text" placeholder="Enter location"> <br>
-        <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Buscar</button>
       </form>
     </div>
   </div>
